# nvim-shader-art

./: .gitignore  LICENSE  README.md
lua/shader-art/: config.lua  detect.lua  init.lua
shader-art-render/: Cargo.toml
shader-art-render/src/: main.rs  renderer.rs  shader.rs
shader-art-render/src/encoder/: ascii.rs  kitty.rs  mod.rs  sixel.rs
shaders/: default.art
